[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.109.0",
    "langchain==1.2.3",
    "langchain-community==0.4.1",
    "langchain-openai==1.1.7",
    "langchain-google-genai==4.2.0",
    "langchain-neo4j==0.7.0",
    "opentelemetry-api==1.22.0",
    "pydantic==2.12.5",
    "uvicorn==0.25.0"
]

[project.optional-dependencies]
dev = ["black", "flake8"]